--- a/.github/workflows/phpcs.yml
+++ b/.github/workflows/phpcs.yml
@@ -6,13 +6,26 @@ on:
 
 jobs:
   phpcs:
-
+    name: phpcs
+    strategy:
+      matrix:
+        php: ['7.4']
     runs-on: ubuntu-latest
-    
     steps:
-    - uses: actions/checkout@v1
-    - uses: rtCamp/action-phpcs-code-review@master
-      env:
-        GH_BOT_TOKEN: ${{ secrets.GH_BOT_TOKEN }}
+    - name: Setup PHP
+      uses: shivammathur/setup-php@v2
       with:
-        args: "WordPress,WordPress-Core,WordPress-Docs"
+        php-version: ${{ matrix.php }}
+        extensions: iconv intl xml soap opcache pdo pdo_mysql mysqli mbstring gd
+        ini-values: phar.readonly=0
+        tools: phpcs
+
+    - name: Configure PHPCS sniffs
+      run: |
+        git clone -b master --depth 1 https://github.com/WordPress/WordPress-Coding-Standards.git /tmp/sniffs
+        phpcs --config-set installed_paths /tmp/sniffs
+
+    - uses: actions/checkout@v2
+
+    - name: Run PHPCS Coding Standards
+      run: phpcs $GITHUB_WORKSPACE
