--- a/.github/workflows/assets-update.yml
+++ b/.github/workflows/assets-update.yml
@@ -8,6 +8,7 @@ jobs:
   master:
     name: Push to master
     runs-on: ubuntu-latest
+    if: github.repository_owner == 'bowlhat'
     steps:
     - uses: actions/checkout@v2
 
