--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -29,7 +29,7 @@ jobs:
       uses: shivammathur/setup-php@v2
       with:
         php-version: ${{ matrix.php }}
-        extensions: iconv intl xml soap opcache pdo pdo_mysql mysqli mbstring gd
+        extensions: iconv, intl, soap, mbstring, mysql, mysqli, gd
         ini-values: phar.readonly=0
         tools: composer
 
@@ -82,6 +82,12 @@ jobs:
         name: build
         path: build/**/*
 
+    - name: Upload composer vendor dir
+      uses: actions/upload-artifact@v2
+      with:
+        name: vendor
+        path: vendor/**/*
+
     - name: Upload languages
       uses: actions/upload-artifact@v2
       with:
@@ -121,13 +127,13 @@ jobs:
     runs-on: ubuntu-latest
     services:
       mysql:
-        image: mysql
+        image: mysql:5.7
         env:
           MYSQL_ROOT_PASSWORD: root
         ports:
-          - 3306:3306
+          - 3306/tcp
         options: >-
-          --health-cmd mysqladmin ping -h localhost
+          --health-cmd "mysqladmin ping -h localhost"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
@@ -136,9 +142,9 @@ jobs:
       uses: shivammathur/setup-php@v2
       with:
         php-version: ${{ matrix.php }}
-        extensions: iconv intl xml soap opcache pdo pdo_mysql mysqli mbstring gd
+        extensions: iconv, intl, soap, mbstring, mysql, mysqli, gd
         ini-values: phar.readonly=0
-        tools: phpunit
+        tools: phpunit:6.5.5
 
     - uses: actions/checkout@v2
 
@@ -146,7 +152,7 @@ jobs:
       uses: actions/download-artifact@v2
 
     - name: Install WordPress Test Suite
-      run: ./bin/install-wp-tests.sh wordpress_test root root mysql ${{ matrix.wordpress }}
+      run: ./bin/install-wp-tests.sh wordpress_test root root 127.0.0.1:${{ job.services.mysql.ports[3306] }} ${{ matrix.wordpress }}
 
     - name: Run phpunit
       run: |
