--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,11 +6,12 @@ on:
 jobs:
   build:
     name: Build
+    runs-on: ubuntu-latest
+    if: github.repository_owner == 'Upvision'
     strategy:
       matrix:
         node: ['10.16.3']
         php: ['7.4']
-    runs-on: ubuntu-latest
     steps:
     - name: Use Node.js ${{ matrix.node }}
       uses: actions/setup-node@v1
@@ -28,7 +29,7 @@ jobs:
       uses: shivammathur/setup-php@v2
       with:
         php-version: ${{ matrix.php }}
-        extensions: iconv intl xml soap opcache pdo pdo_mysql mysqli mbstring gd
+        extensions: iconv, intl, soap, mbstring, mysql, mysqli, gd
         ini-values: phar.readonly=0
         tools: composer
 
@@ -81,6 +82,12 @@ jobs:
         name: build
         path: build/**/*
 
+    - name: Upload composer vendor dir
+      uses: actions/upload-artifact@v2
+      with:
+        name: vendor
+        path: vendor/**/*
+
     - name: Upload languages
       uses: actions/upload-artifact@v2
       with:
@@ -95,16 +102,17 @@ jobs:
 
   phpcs:
     name: phpcs
+    runs-on: ubuntu-latest
+    if: github.repository_owner == 'Upvision'
     strategy:
       matrix:
         php: ['7.4']
-    runs-on: ubuntu-latest
     steps:
     - name: Setup PHP
       uses: shivammathur/setup-php@v2
       with:
         php-version: ${{ matrix.php }}
-        extensions: iconv intl xml soap opcache pdo pdo_mysql mysqli mbstring gd
+        extensions: iconv, intl, soap, mbstring, mysql, mysqli, gd
         ini-values: phar.readonly=0
         tools: phpcs
 
@@ -145,13 +153,13 @@ jobs:
     runs-on: ubuntu-latest
     services:
       mysql:
-        image: mysql
+        image: mysql:5.7
         env:
           MYSQL_ROOT_PASSWORD: root
         ports:
-          - 3306:3306
+          - 3306/tcp
         options: >-
-          --health-cmd mysqladmin ping -h localhost
+          --health-cmd "mysqladmin ping -h localhost"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
@@ -160,9 +168,9 @@ jobs:
       uses: shivammathur/setup-php@v2
       with:
         php-version: ${{ matrix.php }}
-        extensions: iconv intl xml soap opcache pdo pdo_mysql mysqli mbstring gd
+        extensions: iconv, intl, soap, mbstring, mysql, mysqli, gd
         ini-values: phar.readonly=0
-        tools: phpunit
+        tools: phpunit:6.5.5
 
     - uses: actions/checkout@v2
 
@@ -170,7 +178,7 @@ jobs:
       uses: actions/download-artifact@v2
 
     - name: Install WordPress Test Suite
-      run: ./bin/install-wp-tests.sh wordpress_test root root mysql ${{ matrix.wordpress }}
+      run: ./bin/install-wp-tests.sh wordpress_test root root 127.0.0.1:${{ job.services.mysql.ports[3306] }} ${{ matrix.wordpress }}
 
     - name: Run phpunit
       run: |
@@ -183,6 +191,7 @@ jobs:
   deploy_to_worg:
     name: Deploy to WordPress.org
     runs-on: ubuntu-latest
+    if: github.repository_owner == 'Upvision'
     needs:
     - build
     - phpcs
