--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -1,7 +1,6 @@
 name: Run PHPUnit on pull requests
 
 on:
-- push
 - pull_request
 
 jobs:
@@ -215,3 +214,44 @@ jobs:
         else
           phpunit --verbose -c phpunit.xml.dist
         fi
+
+  coverage:
+    name: coverage
+    needs:
+    - build
+    runs-on: ubuntu-latest
+    services:
+      mysql:
+        image: mysql:5.7
+        env:
+          MYSQL_ROOT_PASSWORD: root
+        ports:
+          - 3306/tcp
+        options: >-
+          --health-cmd "mysqladmin ping -h localhost"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+    steps:
+    - name: Setup PHP
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: '7.4'
+        extensions: iconv, intl, soap, mbstring, mysql, mysqli, gd
+        ini-values: phar.readonly=0
+        tools: phpunit:6.5.5
+
+    - uses: actions/checkout@v2
+
+    - name: Download build files
+      uses: actions/download-artifact@v2
+
+    - name: Install WordPress Test Suite
+      run: ./bin/install-wp-tests.sh wordpress_test root root 127.0.0.1:${{ job.services.mysql.ports[3306] }} latest
+
+    - uses: paambaati/codeclimate-action@v2.2.4
+      env:
+        CC_TEST_REPORTER_ID: 6d7dda243546c14b3eb3897386f7f8a7807cbe0984a8d51ac9c1cf37a07a4e55
+      with:
+        coverageCommand: phpunit --verbose -c phpunit.xml.dist --coverage-clover clover.xml
+        coverateLocations: ${{github.workspace}}/clover.xml:clover
