--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,11 @@
         "symfony/polyfill-mbstring": "1.19"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6",
         "wp-coding-standards/wpcs": "^2.3",
         "phpcompatibility/phpcompatibility-wp": "*",
         "dealerdirect/phpcodesniffer-composer-installer": "^0.7.1",
-        "squizlabs/php_codesniffer": "^3.5"
+        "squizlabs/php_codesniffer": "^3.5",
+        "phpunit/phpunit": "^6"
     },
     "replace": {
         "symfony/polyfill-php54": "*",
