--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         }
     },
     "require": {
-        "symfony/polyfill-mbstring": "1.19"
+        "symfony/polyfill-mbstring": "=1.19"
     },
     "require-dev": {
         "wp-coding-standards/wpcs": "^2.3",
