Override docker dind storage driver for code quality
Signed-off-by: Daniel Llewellyn <daniel@bowlhat.net>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,12 @@ include:
   - project: a-z-listing/ci-config
     file: /release-WordPress.org.yml
 
+code_quality:
+  services:
+    - name: docker:stable-dind
+      command: [--storage-driver, aufs]
+
+
 stages:
   - build
   - test
