Add phpunit to composer.json / Fix some smells in templates
Signed-off-by: Daniel Llewellyn <daniel@bowlhat.net>

--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,8 @@
     },
     "autoload": {
         "psr-4": {"A_Z_Listing\\": "src/"}
+    },
+    "require": {
+        "phpunit/phpunit": "^6"
     }
 }
