--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,15 @@
 {
     "name": "bowlhat/wp-a-z-listing",
     "description": "The A-Z Listing plugin for WordPress",
+    "require": {
+        "symfony/polyfill-mbstring": "^1.19"
+    },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.4",
         "wp-coding-standards/wpcs": "^2.1",
         "phpcompatibility/phpcompatibility-wp": "*",
-        "dealerdirect/phpcodesniffer-composer-installer": "^0.7.1"
+        "dealerdirect/phpcodesniffer-composer-installer": "^0.7.1",
+        "phpunit/phpunit": "^6"
     },
     "license": "GPL-2.0-or-later",
     "authors": [
@@ -21,8 +25,5 @@
     },
     "autoload": {
         "psr-4": {"A_Z_Listing\\": "src/"}
-    },
-    "require": {
-        "phpunit/phpunit": "^6"
     }
 }
