--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "start": "wp-scripts start ./scripts/blocks/index.js"
   },
   "devDependencies": {
-    "@wordpress/scripts": "^12.6.0",
+    "@wordpress/scripts": "^13.0.3",
     "babel-core": "^6.26.3",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "eslint": "^7.16.0",
     "grunt": "^1.2.1",
     "grunt-babel": "^8.0.0",
     "grunt-cli": "^1.3.2",
@@ -43,17 +44,17 @@
     "welcome-build-command": "npm run dev"
   },
   "dependencies": {
-    "@wordpress/api-fetch": "^3.21.0",
-    "@wordpress/block-editor": "^5.2.0",
-    "@wordpress/blocks": "^6.25.0",
-    "@wordpress/components": "^12.0.0",
-    "@wordpress/data": "^4.26.0",
-    "@wordpress/element": "^2.19.0",
-    "@wordpress/hooks": "^2.11.0",
-    "@wordpress/i18n": "^3.17.0",
-    "@wordpress/icons": "^2.9.0",
-    "@wordpress/server-side-render": "^1.20.0",
-    "@wordpress/url": "^2.20.0",
+    "@wordpress/api-fetch": "^3.21.5",
+    "@wordpress/block-editor": "^5.2.7",
+    "@wordpress/blocks": "^7.0.3",
+    "@wordpress/components": "^12.0.6",
+    "@wordpress/data": "^4.26.6",
+    "@wordpress/element": "^2.19.1",
+    "@wordpress/hooks": "^2.11.1",
+    "@wordpress/i18n": "^3.18.0",
+    "@wordpress/icons": "^2.9.1",
+    "@wordpress/server-side-render": "^1.20.6",
+    "@wordpress/url": "^2.21.2",
     "uuid": "^8.3.2"
   }
 }
