--- a/.jshintrc
+++ b/.jshintrc
@@ -24,6 +24,7 @@
     "wp": false,
     "export": false,
     "module": false,
-    "require": false
+    "require": false,
+    "lodash": false
   }
 }
