Update GitHub Actions workflows
* Ensure the repository owner is correctly matching a-z-listing

Signed-off-by: Daniel Llewellyn <daniel@bowlhat.net>

--- a/.github/workflows/assets-update.yml
+++ b/.github/workflows/assets-update.yml
@@ -8,7 +8,7 @@ jobs:
   master:
     name: Push to master
     runs-on: ubuntu-latest
-    if: github.repository_owner == 'bowlhat'
+    if: github.repository_owner == 'a-z-listing'
     steps:
     - uses: actions/checkout@v2
 
