--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    if: github.repository_owner == 'Upvision'
+    if: github.repository_owner == 'a-z-listing'
     strategy:
       matrix:
         node: ['10.16.3']
