--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "bowlhat/wp-a-z-listing",
+    "name": "bowlhat\/wp-a-z-listing",
     "description": "The A-Z Listing plugin for WordPress",
     "license": "GPL-2.0-or-later",
     "authors": [
@@ -14,22 +14,24 @@
         }
     },
     "require": {
-        "symfony/polyfill-mbstring": "=1.19"
+        "symfony\/polyfill-mbstring": "=1.19"
     },
     "require-dev": {
-        "wp-coding-standards/wpcs": "^2.3",
-        "phpcompatibility/phpcompatibility-wp": "*",
-        "dealerdirect/phpcodesniffer-composer-installer": "^0.7.1",
-        "squizlabs/php_codesniffer": "^3.5",
-        "phpunit/phpunit": "^6"
+        "wp-coding-standards\/wpcs": "^2.3",
+        "phpcompatibility\/phpcompatibility-wp": "*",
+        "dealerdirect\/phpcodesniffer-composer-installer": "^0.7.1",
+        "squizlabs\/php_codesniffer": "^3.5",
+        "phpunit\/phpunit": "^6"
     },
     "replace": {
-        "symfony/polyfill-php54": "*",
-        "symfony/polyfill-php55": "*",
-        "symfony/polyfill-php56": "*",
-        "symfony/polyfill-php70": "*"
+        "symfony\/polyfill-php54": "*",
+        "symfony\/polyfill-php55": "*",
+        "symfony\/polyfill-php56": "*",
+        "symfony\/polyfill-php70": "*"
     },
     "autoload": {
-        "psr-4": {"A_Z_Listing\\": "src/"}
+        "psr-4": {
+            "A_Z_Listing\\A_Z_Listing\\": "src\/"
+        }
     }
 }
