--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "grunt-sass": "^3.1.0",
     "grunt-wp-i18n": "^1.0.3",
     "grunt-wp-readme-to-markdown": "^2.0.1",
-    "node-sass": "^6.0.1"
+    "sass": "^1.35.2"
   },
   "wp-env": {
     "plugin-dir": "a-z-listing",
