Update ignore files
* Ensure the right files are ignored from distribution and export

Signed-off-by: Daniel Llewellyn <diddledan@ubuntu.com>

--- a/.distignore
+++ b/.distignore
@@ -3,45 +3,35 @@
 /.github
 /.gitlab-ci
 /.idea
-/.log
 /.vscode
 /.wordpress-org
 /bin
-/github
 /gitlab-ci
-/plugin-build
-/documentation
-/img
+/docker
+/node_modules
 /phpstan
 /tests
-/docker
-/docker-output
-/tests
+/wp-includes
 
-.DS_Store
 .codeclimate.yml
-.coveralls.yml
 .distignore
-.dockerignore
 .editorconfig
 .env
 .env.dist
 .gitattributes
 .gitignore
 .gitlab-ci.yml
-.github_changelog_generator
 .jshintrc
 .wp-env.json
+c3.php
 changelog.md
 codeception.dist.yml
 codeception.yml
-composer.json
-composer.lock
 docker-compose.yml
-package-lock.json
-package.json
-phpcs.xml
+phive.xml
+phpcs.xml.dist
 phpstan.neon.dist
 phpunit.xml.dist
 README.md
+scoper.inc.php
 *.msbuildproj
