--- a/.gitattributes
+++ b/.gitattributes
@@ -2,19 +2,34 @@
 /.wordpress-org export-ignore
 /.github export-ignore
 /.gitlab-ci export-ignore
+/.idea export-ignore
+/.vscode export-ignore
+/bin export-ignore
+/docker export-ignore
+/phpstan export-ignore
+/tests export-ignore
+/wp-includes export-ignore
 
 # Files
+/.codeclimate.yml export-ignore
+/.distignore export-ignore
+/.drone.jsonnet export-ignore
+/.drone.yml export-ignore
+/.editorconfig export-ignore
+/.env.dist export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
 /.gitlab-ci.yml export-ignore
-/.drone.jsonnet export-ignore
-/.drone.yml export-ignore
+/.jshindrc export-ignore
+/.wp-env.json export-ignore
 /Dockunit.json export-ignore
 /a-z-listing.msbuildproj export-ignore
 /a-z-listing-phpunit.msbuildproj export-ignore
-/phpunit.xml export-ignore
-/phpunit.xml.dist export-ignore
-/phpunit-multisite.xml export-ignore
-/phpunit-multisite.xml.dist export-ignore
-/phpcs.xml export-ignore
+/c3.php export-ignore
+/codeception*.yml export-ignore
+/docker-compose.yml export-ignore
+/Gruntfile.js export-ignore
+/phive.xml export-ignore
 /phpcs.xml.dist export-ignore
+/phpstan.neon.dist export-ignore
+/scoper.inc.php
