--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "license": "GPL-2.0-or-later",
     "authors": [
         {
-            "name": "Daniel Llewellyn",
+            "name": "Dani Llewellyn",
             "email": "daniel@bowlhat.net"
         }
     ],
