--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -5,5 +5,5 @@ patreon: # Replace with a single Patreon username
 open_collective: # Replace with a single Open Collective username
 ko_fi: diddledani
 tidelift: # Replace with a single Tidelift platform-name/package-name e.g., npm/babel
-liberapay: diddledan
+liberapay: diddledani
 custom: # Replace with a single URL
