--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "authors": [
         {
             "name": "Dani Llewellyn",
-            "email": "daniel@bowlhat.net"
+            "email": "dani@bowlhat.net"
         }
     ],
     "config": {
@@ -23,12 +23,12 @@
         "squizlabs\/php_codesniffer": "^3.5",
         "phpunit\/phpunit": "^6",
         "lucatume/wp-browser": "^3.0",
-        "codeception/module-asserts": "^1.3",                                      
-        "codeception/module-phpbrowser": "^1.0",                                   
-        "codeception/module-webdriver": "^1.0",                                    
-        "codeception/module-db": "^1.0",                                           
-        "codeception/module-filesystem": "^1.0",                                   
-        "codeception/module-cli": "^1.0",                                          
+        "codeception/module-asserts": "^1.3",
+        "codeception/module-phpbrowser": "^1.0",
+        "codeception/module-webdriver": "^1.0",
+        "codeception/module-db": "^1.0",
+        "codeception/module-filesystem": "^1.0",
+        "codeception/module-cli": "^1.0",
         "codeception/util-universalframework": "^1.0"
     },
     "replace": {
