--- a/.github/workflows/testing-integration.yml
+++ b/.github/workflows/testing-integration.yml
@@ -18,8 +18,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php: [ '7.0', '7.1', '7.2', '7.3', '7.4' ]
-        wordpress: [ '5.7', '5.6', '5.5', '5.4', '5.3', '5.2', '5.1', '5.0' ]
+        php: [ '7.0', '7.1', '7.2', '7.3', '7.4', '8.0', '8.1' ]
+        wordpress: [ '5.8', '5.7', '5.6', '5.5', '5.4', '5.3', '5.2', '5.1', '5.0' ]
         include:
           - php: '7.4'
             wordpress: '5.7'
