--- a/.github/workflows/testing-integration.yml
+++ b/.github/workflows/testing-integration.yml
@@ -18,12 +18,40 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php: [ '7.0', '7.1', '7.2', '7.3', '7.4', '8.0', '8.1' ]
-        wordpress: [ '5.8', '5.7', '5.6', '5.5', '5.4', '5.3', '5.2', '5.1', '5.0' ]
         include:
-          - php: '7.4'
-            wordpress: '5.7'
-            coverage: 1
+          # PHP 7.0
+          - { php: '7.0', wordpress: '5.0' }
+          # PHP 7.1
+          - { php: '7.1', wordpress: '5.1' }
+          - { php: '7.1', wordpress: '5.2' }
+          - { php: '7.1', wordpress: '5.3' }
+          # PHP 7.2
+          - { php: '7.2', wordpress: '5.2' }
+          - { php: '7.2', wordpress: '5.3' }
+          - { php: '7.2', wordpress: '5.4' }
+          - { php: '7.2', wordpress: '5.5' }
+          - { php: '7.2', wordpress: '5.6' }
+          # PHP 7.3
+          - { php: '7.3', wordpress: '5.3' }
+          - { php: '7.3', wordpress: '5.4' }
+          - { php: '7.3', wordpress: '5.5' }
+          - { php: '7.3', wordpress: '5.6' }
+          - { php: '7.3', wordpress: '5.7' }
+          - { php: '7.3', wordpress: '5.8' }
+          # PHP 7.4
+          - { php: '7.4', wordpress: '5.3' }
+          - { php: '7.4', wordpress: '5.4' }
+          - { php: '7.4', wordpress: '5.5' }
+          - { php: '7.4', wordpress: '5.6' }
+          - { php: '7.4', wordpress: '5.7' }
+          - { php: '7.4', wordpress: '5.8' }
+          # PHP 8.0
+          - { php: '8.0', wordpress: '5.6' }
+          - { php: '8.0', wordpress: '5.7' }
+          - { php: '8.0', wordpress: '5.8' }
+
+          # Coverage
+          - { php: '7.4', wordpress: '5.8', coverage: 1 }
       fail-fast: false
     name: WordPress ${{ matrix.wordpress }} on PHP ${{ matrix.php }}
     steps:
