--- a/.github/workflows/testing-integration.yml
+++ b/.github/workflows/testing-integration.yml
@@ -49,6 +49,8 @@ jobs:
           - { php: '8.0', wordpress: '5.6' }
           - { php: '8.0', wordpress: '5.7' }
           - { php: '8.0', wordpress: '5.8' }
+          # PHP 8.1
+          - { php: '8.1', wordpress: '5.8' }
 
           # Coverage
           - { php: '7.4', wordpress: '5.8', coverage: 1 }
