--- a/.github/workflows/dependent-issues.yml
+++ b/.github/workflows/dependent-issues.yml
@@ -23,6 +23,7 @@ jobs:
         env:
           # (Required) The token to use to make API calls to GitHub.
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_READ_TOKEN: ${{ secrets.PRIVATE_REPOS }}
         with:
           # (Optional) The label to use to mark dependent issues
           label: dependent
@@ -30,6 +31,10 @@ jobs:
           # (Optional) Enable checking for dependencies in issues. Enable by
           # setting the value to "on". Default "off"
           check_issues: on
+
+          # (Optional) Ignore dependabot PRs.
+          # Enable by setting the value to "on". Default "off"
+          ignore_dependabot: off
 
           # (Optional) A comma-separated list of keywords. Default
           # "depends on, blocked by"
