--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,10 +21,15 @@ update-docs-on-release:
     - tags
   before_script:
     - mkdir -p $HOME/.ssh && cp known_hosts $HOME/.ssh/ && touch $HOME/.ssh/id_rsa && chmod 600 $HOME/.ssh/id_rsa && echo "$SSH_PRIVATE_KEY" > $HOME/.ssh/id_rsa
-  script:
-    - >-
-      wp --ssh=$SSH_USERNAME@$SSH_HOST:$SITE_DIRECTORY post delete
-      $(wp --ssh=$SSH_USERNAME@$SSH_HOST:$SITE_DIRECTORY post list
-        --post_type=wp-parser-function,wp-parser-class,wp-parser-hook,wp-parser-method
-        --format=ids)
-    - wp --ssh=$SSH_USERNAME@$SSH_HOST:$SITE_DIRECTORY parser create wp-content/plugins/a-z-listing
+  script: |
+    POSTS_TO_DELETE=$(wp --ssh=$SSH_USERNAME@$SSH_HOST:$SITE_DIRECTORY post list \
+      --post_type=wp-parser-function,wp-parser-method,wp-parser-class,wp-parser-hook \
+      --format=ids)
+    wp --ssh=$SSH_USERNAME@$SSH_HOST:$SITE_DIRECTORY post delete $POSTS_TO_DELETE
+
+    for tax in wp-parser-source-file wp-parser-source-file wp-parser-since wp-parser-since; do
+      TERMS_TO_DELETE=$(wp --ssh=$SSH_USERNAME@$SSH_HOST:$SITE_DIRECTORY term list $tax --format=ids)
+      wp --ssh=$SSH_USERNAME@$SSH_HOST:$SITE_DIRECTORY term delete $tax $TERMS_TO_DELETE
+    done
+
+    wp --ssh=$SSH_USERNAME@$SSH_HOST:$SITE_DIRECTORY parser create wp-content/plugins/a-z-listing --user=diddledani
