--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "wp-scripts build ./scripts/blocks/index.js && grunt",
     "check-engines": "wp-scripts check-engines",
     "check-licenses": "wp-scripts check-licenses",
-    "wp-env": "wp-env",
+    "env": "wp-env",
     "format:js": "wp-scripts format-js ./scripts",
     "lint:css": "wp-scripts lint-style ./css/editor.css ./css/style.css",
     "lint:js": "wp-scripts lint-js ./scripts",
@@ -17,8 +17,8 @@
     "start": "wp-scripts start ./scripts/blocks/index.js"
   },
   "devDependencies": {
-    "@wordpress/env": "^4.1.2",
-    "@wordpress/scripts": "^18.1.0",
+    "@wordpress/env": "^4.1.3",
+    "@wordpress/scripts": "^19.2.2",
     "babel-core": "^6.26.3",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.7.0",
@@ -45,16 +45,17 @@
   },
   "dependencies": {
     "@wordpress/api-fetch": "^5.2.6",
-    "@wordpress/block-editor": "^7.0.3",
-    "@wordpress/blocks": "^11.1.1",
-    "@wordpress/components": "^18.0.0",
-    "@wordpress/data": "^6.1.4",
-    "@wordpress/element": "^4.0.2",
-    "@wordpress/hooks": "^3.2.1",
-    "@wordpress/i18n": "^4.2.3",
-    "@wordpress/icons": "^6.0.0",
-    "@wordpress/server-side-render": "^3.0.7",
-    "@wordpress/url": "^3.2.3",
+    "@wordpress/block-editor": "^8.0.12",
+    "@wordpress/blocks": "^11.1.5",
+    "@wordpress/components": "^19.1.6",
+    "@wordpress/data": "^6.1.5",
+    "@wordpress/dom-ready": "^3.2.3",
+    "@wordpress/element": "^4.0.4",
+    "@wordpress/hooks": "^3.2.2",
+    "@wordpress/i18n": "^4.2.4",
+    "@wordpress/icons": "^6.1.1",
+    "@wordpress/server-side-render": "^3.0.16",
+    "@wordpress/url": "^3.3.1",
     "lodash": "^4.17.20",
     "uuid": "^8.3.2"
   }
