Fix broken hide-empty-terms feature
Signed-off-by: Dani Llewellyn <dani@bowlhat.net>

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,10 @@
     "config": {
         "platform": {
             "php": "7.0"
+        },
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true,
+            "kylekatarnls/update-helper": true
         }
     },
     "require": {
