--- a/.github/workflows/testing-integration.yml
+++ b/.github/workflows/testing-integration.yml
@@ -38,6 +38,7 @@ jobs:
           - { php: '7.3', wordpress: '5.6' }
           - { php: '7.3', wordpress: '5.7' }
           - { php: '7.3', wordpress: '5.8' }
+          - { php: '7.3', wordpress: '5.9' }
           # PHP 7.4
           - { php: '7.4', wordpress: '5.3' }
           - { php: '7.4', wordpress: '5.4' }
@@ -45,15 +46,18 @@ jobs:
           - { php: '7.4', wordpress: '5.6' }
           - { php: '7.4', wordpress: '5.7' }
           - { php: '7.4', wordpress: '5.8' }
+          - { php: '7.4', wordpress: '5.9' }
           # PHP 8.0
           - { php: '8.0', wordpress: '5.6' }
           - { php: '8.0', wordpress: '5.7' }
           - { php: '8.0', wordpress: '5.8' }
+          - { php: '8.0', wordpress: '5.9' }
           # PHP 8.1
           - { php: '8.1', wordpress: '5.8' }
+          - { php: '8.1', wordpress: '5.9' }
 
           # Coverage
-          - { php: '7.4', wordpress: '5.8', coverage: 1 }
+          - { php: '7.4', wordpress: '5.9', coverage: 1 }
       fail-fast: false
     name: WordPress ${{ matrix.wordpress }} on PHP ${{ matrix.php }}
     steps:
