--- a/.editorconfig
+++ b/.editorconfig
@@ -11,6 +11,8 @@ charset = utf-8
 end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
+
+[{*.php,*.js,*.scss}]
 indent_style = tab
 indent_size = 4
 
