--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,12 +19,12 @@ services:
       local:
 
   app_db:
-    image: mysql:5.7
+    image: mariadb:10.6
     environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE:      wordpress
-      MYSQL_USER:          wordpress
-      MYSQL_PASSWORD:      wordpress
+      MARIADB_ROOT_PASSWORD: root
+      MARIADB_DATABASE:      wordpress
+      MARIADB_USER:          wordpress
+      MARIADB_PASSWORD:      wordpress
     ports:
       - '3306'
     networks:
