--- a/.github/workflows/testing-integration.yml
+++ b/.github/workflows/testing-integration.yml
@@ -39,7 +39,6 @@ jobs:
           - { php: '7.3', wordpress: '5.7' }
           - { php: '7.3', wordpress: '5.8' }
           - { php: '7.3', wordpress: '5.9' }
-          - { php: '7.3', wordpress: 'beta' }
           # PHP 7.4
           - { php: '7.4', wordpress: '5.3' }
           - { php: '7.4', wordpress: '5.4' }
@@ -48,17 +47,17 @@ jobs:
           - { php: '7.4', wordpress: '5.7' }
           - { php: '7.4', wordpress: '5.8' }
           - { php: '7.4', wordpress: '5.9' }
-          - { php: '7.4', wordpress: 'beta' }
+          - { php: '7.4', wordpress: '6.0' }
           # PHP 8.0
           - { php: '8.0', wordpress: '5.6' }
           - { php: '8.0', wordpress: '5.7' }
           - { php: '8.0', wordpress: '5.8' }
           - { php: '8.0', wordpress: '5.9' }
-          - { php: '8.0', wordpress: 'beta' }
+          - { php: '8.0', wordpress: '6.0' }
           # PHP 8.1
           - { php: '8.1', wordpress: '5.8' }
           - { php: '8.1', wordpress: '5.9' }
-          - { php: '8.1', wordpress: 'beta' }
+          - { php: '8.1', wordpress: '6.0' }
 
           # Coverage
           - { php: '7.4', wordpress: '5.9', coverage: 1 }
