--- a/.editorconfig
+++ b/.editorconfig
@@ -22,3 +22,7 @@ indent_size = 2
 
 [{*.txt,wp-config-sample.php}]
 end_of_line = lf
+
+[README.md]
+end_of_line = lf
+trim_trailing_whitespace = false
