--- a/.github/workflows/testing-integration.yml
+++ b/.github/workflows/testing-integration.yml
@@ -22,16 +22,22 @@ jobs:
           # PHP 7.0
           - { php: '7.0', wordpress: '5.0' }
           # PHP 7.1
+          - { php: '7.1', wordpress: '5.0' }
           - { php: '7.1', wordpress: '5.1' }
           - { php: '7.1', wordpress: '5.2' }
           - { php: '7.1', wordpress: '5.3' }
           # PHP 7.2
+          - { php: '7.2', wordpress: '5.0' }
+          - { php: '7.2', wordpress: '5.1' }
           - { php: '7.2', wordpress: '5.2' }
           - { php: '7.2', wordpress: '5.3' }
           - { php: '7.2', wordpress: '5.4' }
           - { php: '7.2', wordpress: '5.5' }
           - { php: '7.2', wordpress: '5.6' }
           # PHP 7.3
+          - { php: '7.3', wordpress: '5.0' }
+          - { php: '7.3', wordpress: '5.1' }
+          - { php: '7.3', wordpress: '5.2' }
           - { php: '7.3', wordpress: '5.3' }
           - { php: '7.3', wordpress: '5.4' }
           - { php: '7.3', wordpress: '5.5' }
@@ -48,19 +54,23 @@ jobs:
           - { php: '7.4', wordpress: '5.8' }
           - { php: '7.4', wordpress: '5.9' }
           - { php: '7.4', wordpress: '6.0' }
+          - { php: '7.4', wordpress: '6.1' }
           # PHP 8.0
           - { php: '8.0', wordpress: '5.6' }
           - { php: '8.0', wordpress: '5.7' }
           - { php: '8.0', wordpress: '5.8' }
           - { php: '8.0', wordpress: '5.9' }
           - { php: '8.0', wordpress: '6.0' }
+          - { php: '8.0', wordpress: '6.1' }
           # PHP 8.1
-          - { php: '8.1', wordpress: '5.8' }
           - { php: '8.1', wordpress: '5.9' }
           - { php: '8.1', wordpress: '6.0' }
+          - { php: '8.1', wordpress: '6.1' }
+          # PHP 8.2
+          - { php: '8.2', wordpress: '6.1' }
 
           # Coverage
-          - { php: '7.4', wordpress: '5.9', coverage: 1 }
+          - { php: '7.4', wordpress: '6.1', coverage: 1 }
       fail-fast: false
     name: WordPress ${{ matrix.wordpress }} on PHP ${{ matrix.php }}
     steps:
